<resources>
    <string name="app_name">Nota Notebook</string>
    <string name="notebook">Notebook</string>
    <string name="space_notes"> notes</string>
    <string name="edit_notebook">Edit notebook</string>
    <string name="edit_color">Edit Color</string>
    <string name="done">done</string>
    <string name="short_app_name">Nota</string>
    <string name="enter_item_text">Add task</string>
    <string name="archive">Archive</string>
    <string name="pin">Pin</string>
    <string name="edit_title">Edit title</string>
    <string name="title">Title</string>
    <string name="info">Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="use_a_different_email_address">Use a different email address</string>
    <string name="email_verification_required">Email Verification Required</string>
    <string name="an_email_has_been_sent_to_you">an email has been sent to:</string>
    <string name="email_ver_instruction">Please follow the instructions in the verification email to finish creating your account</string>
    <string name="didn_t_receive_an_email">Didn\'t receive an email?</string>
    <string name="resend_verification_email">Resend verification email</string>
    <string name="choose_notebook">Choose Notebook:</string>
</resources>